[project]
name = "eduprompt"
version = "0.1.0"
description = "AI-powered STEM tutoring application with interactive learning experiences"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "openai>=1.95.1",
    "pandas>=2.3.1",
    "streamlit>=1.46.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
